<resources>
    <string name="app_name">Baby In The Car</string>
    <string name="activate">Activate</string>
    <string name="logo">TODO</string>
    <string name="txt">-</string>
    <string name="current_status">Current Status:</string>

    <string name="title_activity_permission_rational">PermissionRationalActivity</string>
    <string name="main_message_activity_permission_rational">Track activity changes by letting us read your phone\'s activity transitions.</string>
    <string name="details_message_activity_permission_rational">This app\'s experience requires access to your phone\'s activity transitions to display changes from walking to standing still.</string>
    <string name="no_thanks_activity_permission_rational">No Thanks</string>
    <string name="continue_activity_permission_rational">Continue</string>
    <string name="enable_disable_button_activity_recognition">Enable/Disable Activity Recognition</string>
    <string name="explainHeb">אנא אשרו מעקב אחרי שינוי פעילות על מנת שהאפליקציה תוכל לתפקד כראוי</string>
    <string name="approveHeb">האפליקציה צריכה גישה למידע של מעבר בין פעילויות על מכשירך על מנת לזהות אם המשתמש נוהג או לא..</string>
    <string name="actiavtion_stop_btn">actiavtion/stop btn</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="hebrew">Hebrew</string>
    <string name="Hebrew">עברית</string>
    <string name="explanation">Explanation</string>
    <string name="change_alarm_timing">Change Alarm Timing</string>
    <string name="help">Help</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="how_many_seconds">How many seconds?</string>
    <string name="input_seconds">How many seconds after you stop driving?</string>
    <string name="location_message">Hi, this is an automatic message, I did not respond to the alarm of a "baby in the car" protection app. This is the my current location:</string>
    <string name="SMS_Settings">SMS Settings</string>
    <string name="SMS_hint">Send Location SMS to this number</string>
    <string name="SMS_Target_Explanation">We will send an automatic message with your location to that number if you don\'t respond to the alarm for two minutes</string>
    <string name="restart_app">Restart App</string>
    <string name="change_theme">Change Theme</string>
</resources>