<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgnew2"
    tools:context=".AlarmDelay">

    <EditText
        android:id="@+id/userInputS"
        android:layout_width="361dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/SMS_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowRadius="8"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textColorHint="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/cancelBtnS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/applyBtnS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelBtnS"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInputS"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/cancelBtnS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/applyBtnS"
        app:layout_constraintTop_toBottomOf="@+id/userInputS" />

    <TextView
        android:id="@+id/curNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/userInputS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SMS_Explanation"
        android:layout_width="358dp"
        android:layout_height="35dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/SMS_Target_Explanation"
        android:textColor="#323232"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/userInputS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

</androidx.constraintlayout.widget.ConstraintLayout>