<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/approvebg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PermissionRationalActivity">

    <TextView
        android:id="@+id/detailsTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:shadowRadius="5"
        android:text="@string/approveHeb"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/deny_permission_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMessageTextView"
        app:layout_constraintVertical_bias="0.789" />

    <TextView
        android:id="@+id/mainMessageTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:shadowColor="#000000"
        android:shadowRadius="5"
        android:text="@string/explainHeb"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deny_permission_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/background_light"
        android:backgroundTint="#63C8E6"
        android:onClick="onClickDenyPermissionRequest"
        android:shadowColor="#FF5722"
        android:shadowRadius="4"
        android:stateListAnimator="@null"
        android:text="@string/no_thanks_activity_permission_rational"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/approve_permission_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/background_light"
        android:backgroundTint="#63C8E6"
        android:onClick="onClickApprovePermissionRequest"
        android:shadowColor="#FF5722"
        android:shadowRadius="4"
        android:stateListAnimator="@null"
        android:text="@string/continue_activity_permission_rational"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/deny_permission_request" />

    <TextView
        android:id="@+id/mainMessageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:shadowColor="#000000"
        android:shadowRadius="5"
        android:text="@string/main_message_activity_permission_rational"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:shadowRadius="5"
        android:text="@string/details_message_activity_permission_rational"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/deny_permission_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMessageTextView"
        app:layout_constraintVertical_bias="0.445" />
</androidx.constraintlayout.widget.ConstraintLayout>